--- a/excelupload/templates/uploaded.html
+++ b/excelupload/templates/uploaded.html
@@ -11,10 +11,6 @@
 </head>
 <body>
 <p>Uploaded Files</p>
-<ul>
-    <li>
-        <p>{{ document }}</p>
-    </li>
-</ul>
+{{ document | safe }}
 </body>
 </html>
