--- a/oauth/templates/oauth/login.html
+++ b/oauth/templates/oauth/login.html
@@ -18,6 +18,7 @@
         <p>name: {{ account.extra_data.name }}</p>
     {% endfor %}
     <a href="/google-login/logout" role="button" class="btn btn-primary">로그아웃</a><br>
+    <a href="/excel/" role="button" class="btn btn-success">엑셀 업로드</a>
 {% else %}
     <a href="{% provider_login_url 'google' method='oauth2' %}" role="button" class="btn btn-secondary">구글 로그인</a><br>
 {% endif %}
