--- a/excelupload/templates/excel.html
+++ b/excelupload/templates/excel.html
@@ -1,61 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-<head>
-    <meta charset="UTF-8">
-    <title>Excel upload</title>
-</head>
-<body>
-<form method="POST" action="" enctype="multipart/form-data">
-    {% csrf_token %}
-    {% for field in form %}
-        {% if field.label == "과정" %}
-            <div class="form-group">
-                <label for="degree">과정</label>
-                <select class="form-select" name="{{ field.name }}" id="degree">
-                    {% for v, k in form.fields.degree.choices %}
-                        <option value="{{ v }}" {% if form.fields.degree.value == v %} selected {% endif %}>{{ k }}</option>
+{% extends 'base.html' %}
+{% block content %}
+    <section id="studentinput">
+        <div class="inner">
+
+            <form method="POST" action="" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="fields">
+                    {% for field in form %}
+                        {% if field.label == "Course" %}
+                            <div class="field half">
+                                <label for="degree">Course</label>
+                                <select class="" name="{{ field.name }}" id="degree">
+                                    {% for v, k in form.fields.degree.choices %}
+                                        <option value="{{ v }}" {% if form.fields.degree.value == v %} selected {% endif %}>{{ k }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        {% elif field.label == "Student Number" %}
+                            <div class="field">
+                                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                <input type="{{ field.field.widget.input_type }}" id="{{ field.id_for_label }}" placeholder="{{ field.help_text }}" name="{{ field.name }}" value="{{ field.value }}">
+                                {% if field.errors %}
+                                    <span style="color:red">{{ field.errors }}</span>
+                                {% endif %}
+                            </div>
+                        {% endif %}
                     {% endfor %}
-                </select>
-            </div>
-        {% elif field.label == "수학통계 기초 통과" or field.label == "컴퓨팅 기초 통과" or field.label == "논문자격시험 통과" %}
-            <div class="form-check">
-                <input type="{{ field.field.widget.input_type }}" class="" id="{{ field.id_for_label }}" placeholder="{{ field.help_text }}" name="{{ field.name }}" value="{{ field.name }}">
-                <label for="{{ field.id_for_label }}" class="">{{ field.label }}</label>
-            </div>
-        {% else %}
-            <div class="form-group">
-                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" placeholder="{{ field.help_text }}" name="{{ field.name }}" value="{{ field.value }}">
-            </div>
+                    <div class="field half">
+                        {% for field in form %}
+                            {% if field.label == "Passed Mathematics/Statistics" or field.label == "Passed Computing" or field.label == "Passed Qualification Exam" %}
+                                <div class="">
+                                    <input type="{{ field.field.widget.input_type }}" class="" id="{{ field.id_for_label }}" placeholder="{{ field.help_text }}" name="{{ field.name }}" value="{{ field.name }}">
+                                    <label for="{{ field.id_for_label }}" class="">{{ field.label }}</label>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
 
-            {% if field.errors %}
-                <span style="color:red">{{ field.errors }}</span>
-            {% endif %}
-        {% endif %}
-        <br/>
-    {% endfor %}
-    <p></p>
-    <button type="submit" class="btn btn-primary">업로드</button>
-    <a type="button" class="btn btn-danger" href="/">Home</a>
-</form>
-</body>
-<script>
-    function checkbox_onclick() {
-        if ($('#id_bootMath').is(":checked")) {
-            $("#id_bootMath").val(true);
-        } else {
-            $("#id_bootMath").val(false);
-        }
+                    {% for field in form %}
+                        {% if field.label == "Upload Excel" %}
+                            <div class="field">
+                                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                <input type="{{ field.field.widget.input_type }}" id="{{ field.id_for_label }}" placeholder="{{ field.help_text }}" name="{{ field.name }}" value="{{ field.value }}">
+                                {% if field.errors %}
+                                    <span style="color:red">{{ field.errors }}</span>
+                                {% endif %}
 
-        if ($('#id_bootCom').is(":checked")) {
-            $("#id_bootCom").val(true);
-        } else {
-            $("#id_bootCom").val(false);
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <ul class="actions">
+                    <li><input type="submit" value="Upload File" class="primary"></li>
+                    <li><input type="reset" value="Clear"></li>
+                </ul>
+            </form>
+        </div>
+    </section>
+    <script>
+        function checkbox_onclick() {
+            if ($('#id_bootMath').is(":checked")) {
+                $("#id_bootMath").val(true);
+            } else {
+                $("#id_bootMath").val(false);
+            }
+
+            if ($('#id_bootCom').is(":checked")) {
+                $("#id_bootCom").val(true);
+            } else {
+                $("#id_bootCom").val(false);
+            }
         }
-    }
-</script>
-</html>
+    </script>
+{% endblock %}
