home.html, base.html, css

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <div id="wrapper">
     <!-- Header -->
     <header id="header">
-        <a href="/oauth/static" class="logo"><strong>BKMS</strong> <span>Team5</span></a>
+        <a href="/" class="logo"><strong>BKMS</strong> <span>Team5</span></a>
         <nav>
             <a href="#menu">Menu</a>
         </nav>
@@ -25,7 +25,7 @@
     <!-- Menu -->
     <nav id="menu">
         <ul class="links">
-            <li><a href="/oauth/static">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/excel/">Excel Upload</a></li>
             <li><a href="common/generic.html">Recommended subject</a></li>
             <li><a href="elements.html">Menu3</a></li>
