--- a/templates/common/home.html
+++ b/templates/common/home.html
@@ -41,7 +41,7 @@
                     <img src="{% static 'images/pic04.jpg' %}" alt=""/>
                 </span>
                 <header class="major">
-                    <h3><a href="landing.html" class="link">Recommended Subjects</a></h3>
+                    <h3><a href="/" class="link">Recommended Subjects</a></h3>
                     <p>brief explanation of the section</p>
                 </header>
             </article>
@@ -50,7 +50,7 @@
                     <img src="{% static 'images/pic05.jpg' %}" alt=""/>
                 </span>
                 <header class="major">
-                    <h3><a href="landing.html" class="link">Consequat</a></h3>
+                    <h3><a href="/" class="link">Consequat</a></h3>
                     <p>Ipsum dolor sit amet</p>
                 </header>
             </article>
@@ -59,7 +59,7 @@
                     <img src="{% static 'images/pic06.jpg' %}" alt=""/>
                 </span>
                 <header class="major">
-                    <h3><a href="landing.html" class="link">Etiam</a></h3>
+                    <h3><a href="/" class="link">Etiam</a></h3>
                     <p>Feugiat amet tempus</p>
                 </header>
             </article>
