--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         <ul class="links">
             <li><a href="/">Home</a></li>
             <li><a href="/excel/">Graduation Checker</a></li>
-            <li><a href="/">Recommended subjects</a></li>
+            <li><a href="/recommendation/">Recommended subjects</a></li>
             <li><a href="/">Share Timetables</a></li>
         </ul>
         <ul class="actions stacked">
