--- a/templates/common/home.html
+++ b/templates/common/home.html
@@ -50,7 +50,7 @@
                     <img src="{% static 'images/pic05.jpg' %}" alt=""/>
                 </span>
                 <header class="major">
-                    <h3><a href="/" class="link">Recommended Subjects</a></h3>
+                    <h3><a href="/recommendation/" class="link">Recommended Subjects</a></h3>
                     <p>recommended customized subjects based on users and hashtags</p>
                 </header>
             </article>
