--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/excel/">Graduation Checker</a></li>
             <li><a href="/recommendation/">Recommended subjects</a></li>
-            <li><a href="/">Share Timetables</a></li>
+            <li><a href="/common/share/">Share Timetables</a></li>
         </ul>
         <ul class="actions stacked">
             {% if user.is_authenticated %}
