--- a/templates/common/home.html
+++ b/templates/common/home.html
@@ -59,7 +59,7 @@
                     <img src="{% static 'images/pic06.jpg' %}" alt=""/>
                 </span>
                 <header class="major">
-                    <h3><a href="/" class="link">Share Timetables</a></h3>
+                    <h3><a href="/common/share/" class="link">Share Timetables</a></h3>
                     <p>If you agree to share the timetable, you can view the timetable of other classmates</p>
                 </header>
             </article>
